--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
             margin: 0 .25em;
             color: red;
         }
+        
+        i:hover {
+            color: blueviolet;
+        }
     </style>
 </head>
 
 <body id="theBody">
     <script>
         //1) Mostrar a pantalla 5 estrelles (o l’icona que més us agradi) centrades i amb un color assignat
+        //2) Que el color de l’estrella canvi si el mouse es posa sobre d’una d’elles
 
         // heartRegular = '<i class="far fa-heart"></i>';
         // heartSolid = '<i class="fas fa-heart"></i>';        
